@@ -4,6 +4,7 @@ from decimal import Decimal
 import uuid
 from django import template
 from django.template import loader
+from django.templatetags.static import static
 
 from ..models import UserRating
 from .. import app_settings, get_star_ratings_rating_model
@@ -49,7 +50,7 @@ def ratings(context, item, icon_height=app_settings.STAR_RATINGS_STAR_HEIGHT, ic
         'icon_height': icon_height,
         'icon_width': icon_width,
         'sprite_width': icon_width * 3,
-        'sprite_image': app_settings.STAR_RATINGS_STAR_SPRITE,
+        'sprite_image': static(app_settings.STAR_RATINGS_STAR_SPRITE),
         'id': 'dsr{}'.format(uuid.uuid4().hex),
         'anonymous_ratings': app_settings.STAR_RATINGS_ANONYMOUS,
         'read_only': read_only,
